--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -41,10 +41,15 @@ spec:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 30
+            periodSeconds: 30
           readinessProbe:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 30
+            periodSeconds: 30
+          stop_grace_period: 120s
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
