--- a/values.yaml
+++ b/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: "homeassistant/home-assistant"
+  repository: "ghcr.io/home-assistant/home-assistant"
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "2023.1"
+  tag: "2025.12.3"
 
 imagePullSecrets: []
 nameOverride: ""
